visibility en boton

--- a/app/styles/item/show.scss
+++ b/app/styles/item/show.scss
@@ -65,7 +65,12 @@
       }
     }
   }
-
+  .visible {
+    visibility: visible;
+  }
+  .hidden{
+    visibility: hidden;
+  }
   .action-buttons-wrapper {
     text-align: center;
 
