--- a/app/templates/cart/courier/customer-order-delivery.jade
+++ b/app/templates/cart/courier/customer-order-delivery.jade
@@ -14,7 +14,7 @@ ion-modal-view
     ion-content.resource-form.checkout-form
       .list.list-inset
 
-        label.item.item-input.item-stacked-label
+        label.item.item-input.item-stacked-label.item-input--no-borders
           span.input-label {{::("globals.dateDelivery"|translate)}}
         .delivery-time-wrapper
             ion-datetime-picker.item.item-icon-left.datetime-picker(
