--- a/app/templates/customer/orders/index.jade
+++ b/app/templates/customer/orders/index.jade
@@ -6,21 +6,22 @@ ion-view(
   ion-content.resource-collection
     .list.list-inset.list--no-borders.resource-collection-table
       .row.table-headers
-        .col.col-30 {{ ::("orders.collectionTitle"|translate) }}
-        .col.col-35 {{ ::("orders.date"|translate) }}
-        .col.col-15.text-right
+        .col.col-55 {{ ::("orders.collectionTitle"|translate) }}
+        .col.col-30.text-right
           | {{ ::("orders.total"|translate) }}
-        .col.col-20
+        .col.col-15
 
       .item.row(
         ng-repeat='customerOrder in ::customerOrdersVm.customerOrders track by $index'
       )
-        .col.col-30
-          | {{ ::("orders.collectionTitle" | translate) }}{{ ::customerOrder.id }}
-        .col.col-35 {{ ::(customerOrder.created_at | formatDate:'DD MMMYYYY hh:mmA') }}
-        .col.col-15.text-right
+        .col.col-55
+          div
+            | {{ ::("orders.collectionTitle" | translate) }}{{ ::customerOrder.id }}
+          div
+            | {{ ::(customerOrder.submitted_at | formatDate:'DD MMMYYYY hh:mmA') }}
+        .col.col-30.text-right.col--wrap
           | {{ ::(customerOrder.subtotal_items_cents | priceCurrency | currency) }}
-        .col.col-20.text-right
+        .col.col-15.text-right
           a.button.button-clear.button-positive.button-small(
             ui-sref='app.customerorders.show({ id: customerOrder.id , customerOrder: customerOrder })'
           ) {{::("globals.seeMore"|translate)}}
