--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,15 +39,16 @@
 @import "directives/link-button";
 @import "directives/providers-carousel";
 @import "directives/slick-item";
+@import "resource/details-table";
+@import "resource/collection-table";
 @import "categories/index";
 @import "categories/show";
 @import "customer/show";
+@import "customer/order";
 @import "customer/profile-form";
 @import "item/index";
 @import "item/form";
 @import "item/show";
-@import "resource/details-table";
-@import "resource/collection-table";
 @import "clients/index";
 @import "wishlist/wishlist";
 @import "error/error";
