--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -3,9 +3,11 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content
-    .resource-collection(ng-repeat='providerProfile in ::customerOrderVm.customerOrder.provider_profiles track by $index')
-      .list.list-inset.list--no-borders.resource-collection-table
+  ion-content.submitted-customer-order-preview
+    .resource-collection(
+      ng-repeat='providerProfile in ::customerOrderVm.customerOrder.provider_profiles track by $index'
+    )
+      .list.list-inset.list--no-borders.resource-collection-table.narrow
         .row.table-headers
           .col.col-50 {{ providerProfile.nombre_establecimiento || providerProfile.razon_social }}
           .col.col-25 {{ ::("order.providerProfile.quantity" |translate) }}
@@ -16,31 +18,37 @@ ion-view(
             .col.col-25 {{ ::( ("order.providerProfile.item.cantidadPrefix" |translate) + item.cantidad) }}
             .col.col-25 {{ ::(item.provider_item_precio_cents | priceCurrency | currency) }}
           .item.row(ng-if="item.observaciones")
-            .col.col-100.col--elastic {{ ::( ("order.providerProfile.item.observations" |translate) + item.observaciones) }}
+            .col.col-100.customer-order-item-observations
+              span.strong
+                | {{ ::("order.providerProfile.item.observations" |translate) }}
+              | {{ ::item.observaciones }}
+
+        .item.row.strong
+          .col.col-100 {{ ::(providerProfile.customer_order_delivery.status) }}
 
     .resource-collection
       .list.list-inset.list--no-borders.resource-collection-table.text-right
         .row.item
           .col.col-75
             | {{ ::("order.summary.subtotal" |translate) }}
-          .col.col-25
+          .col.col-25.strong
             | {{ ::( customerOrderVm.customerOrder.subtotal_items_cents | priceCurrency | currency ) }}
         .row.item
           .col.col-75
             | {{ ::("order.summary.shippingCosts" |translate) }}
-          .col.col-25
+          .col.col-25.strong
             | {{ ::( '0' | priceCurrency | currency ) }}
         .row.item
           .col.col-75
             | {{ ::( (customerOrderVm.VAT*100) + ("order.summary.VAT" |translate) ) }}
-          .col.col-25
+          .col.col-25.strong
             | {{ ::( customerOrderVm.customerOrder.subtotalVATCents | priceCurrency | currency ) }}
         .row.table-headers
           .col.col-100
         .row.item
           .col.col-75
             | {{ ::("order.summary.total" |translate) }}
-          .col.col-25
+          .col.col-25.strong
             | {{ ::( customerOrderVm.customerOrder.totalCents | priceCurrency | currency ) }}
 
     //- not implemented yet
