--- a/app/templates/wishlist/form.jade
+++ b/app/templates/wishlist/form.jade
@@ -12,12 +12,15 @@ label.item.item-input.item-stacked-label
 label.item.item-input.item-stacked-label
   span.input-label {{::("wishlist.items"|translate)}}
   .row-wishlist-action
-    span(ng-if="!wishlistsVm.wishlist.provider_items || wishlistsVm.wishlist.provider_items.length === 0")
-      | {{::("wishlist.noItems"|translate)}}
+    button(
+      ng-click="wishlistsVm.redirectCategories()"
+      ng-disabled="!wishlistsVm.editing"
+    ).button.button-clear.button-energized
+      | {{::("wishlist.buttonAddItems"|translate)}}
     ion-list(ng-if="wishlistsVm.wishlist.provider_items.length > 0")
       ion-item.wishlist-item(ng-repeat="item in ::wishlistsVm.wishlist.provider_items track by $index")
-          i.icon.ion-checkmark
-          .text {{item.titulo}}
+        i.icon.ion-checkmark
+        .text {{item.titulo}}
 
 label.item.item-input.item-stacked-label
   span.input-label {{::("globals.dateDelivery"|translate)}}
@@ -30,7 +33,7 @@ label.item.item-input.item-stacked-label
       only-valid="{'after': 'today', 'inclusive': true}"
       ng-model='wishlistsVm.wishlist.entregar_en'
       type='button'
-    ).button-text-yellow
+    ).button.button-clear.button-energized
       span(ng-if="!wishlistsVm.wishlist.entregar_en")
         | {{::("wishlist.buttonAddDate"|translate)}}
       span(ng-if="wishlistsVm.wishlist.entregar_en")
