--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -37,7 +37,11 @@ ion-side-menus(enable-menu-with-back-views='false')
           li {{::("menu.client.billingAddresses"|translate)}}
         ion-item
           | {{::("menu.invite"|translate)}}
-        ion-item(ng-controller='LoginController as loginVm', ng-click='loginVm.logout()')
+        ion-item(
+          menu-close
+          ng-controller='LoginController as loginVm'
+          ng-click='loginVm.logout()'
+        )
           | {{::("menu.logout"|translate)}}
         ion-item.gray-item
           | {{::("menu.changeTo"|translate)}}
