--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -16,6 +16,11 @@
     font-family: Montserrat-SemiBold;
   }
 
+  p {
+    margin: auto;
+    font-family: Montserrat-Regular;
+  }
+
   .input-label {
     abbr {
       margin-left: 5px;
