--- a/app/templates/cart/customer-order-delivery-modal.jade
+++ b/app/templates/cart/customer-order-delivery-modal.jade
@@ -58,13 +58,16 @@ ion-modal-view
             span {{address.nombre}} ({{ address.direccion_uno }})
         show-error(array-messages='cartVm.messages.customer_address_id')
 
-        .item.item-input.item-input--no-borders.text-center(
+        .text-center(
           ng-if="!cartVm.addresses.length > 0"
         )
-          button.button.button-outline.button-small.button-energized(
-            type="button"
-            ng-click="cartVm.customerOrderDeliveryNewAddress()"
-          ) {{ ::("cart.addDeliveryAddress" | translate) }}
+          .item.item-input.item-input--no-borders
+            p {{ ::("profile.addresses.noAddressesSaved" | translate) }}
+          .item.item-input.item-input--no-borders
+            button.button.button-outline.button-small.button-energized(
+              type="button"
+              ng-click="cartVm.customerOrderDeliveryNewAddress()"
+            ) {{ ::("cart.addDeliveryAddress" | translate) }}
 
     ion-footer-bar.bar-stable.bar-footer--tall
       button.button.button-outline.button-energized(
