fix setting lat/lon in customer addresses

--- a/app/templates/profile/addresses/form_template.jade
+++ b/app/templates/profile/addresses/form_template.jade
@@ -11,7 +11,7 @@ form(
 
       maps(
         lat="pfaVm.addressFormData.lat"
-        lng="pfaVm.addressFormData.lon"
+        lon="pfaVm.addressFormData.lon"
         default-in-current-geolocation="pfaVm.defaultInCurrentGeolocation"
         direccion="pfaVm.addressFormData.direccion_uno" ciudad="pfaVm.addressFormData.ciudad"
       )
