--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@
 @import "common/tabs-striped";
 @import "common/grid";
 @import "common/slick";
+@import "common/modal";
 @import "forms/general";
 @import "forms/inputs";
 @import "forms/resource-form";
