directiva de boton de carrito con numero de item

--- a/app/templates/category/index.jade
+++ b/app/templates/category/index.jade
@@ -4,13 +4,8 @@ ion-view(
   ion-nav-title
     .alt-logo
 
-  //- cart
   ion-nav-buttons(side="right")
-    button.cart-main-button(
-      ui-sref='app.cart.index'
-      ng-if='menuVm.existCartActive'
-    ) {{menuVm.numberItems}}
-      i.ion-ios-cart-outline
+    cart-button
 
   ion-content
     .grid-parent
