enhance maps directive

--- a/app/templates/profile/addresses/form_template.jade
+++ b/app/templates/profile/addresses/form_template.jade
@@ -13,7 +13,9 @@ form(
         lat="pfaVm.addressFormData.lat"
         lon="pfaVm.addressFormData.lon"
         default-in-current-geolocation="pfaVm.defaultInCurrentGeolocation"
-        direccion="pfaVm.addressFormData.direccion_uno" ciudad="pfaVm.addressFormData.ciudad"
+        direccion="pfaVm.addressFormData.direccion_uno"
+        direccion-dos="pfaVm.addressFormData.direccion_dos"
+        ciudad="pfaVm.addressFormData.ciudad"
       )
       show-error(array-messages='pfaVm.messages.lat || pfaVm.messages.lon')
 
