--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@
 
 @import "fonts/fonts";
 @import "common/rows";
+@import "common/text";
 @import "common/mixins";
 @import "common/buttons";
 @import "common/footer-stripes";
