--- a/app/templates/cart/customer-order-delivery-modal.jade
+++ b/app/templates/cart/customer-order-delivery-modal.jade
@@ -12,7 +12,7 @@ ion-modal-view.slim-modal
           i.ion-close
           
       .slim-item-title
-        {{ ::cartVm.providerProfile.nombre_establecimiento }}
+        | {{ ::cartVm.providerProfile.nombre_establecimiento }}
 
       .list.list-inset
         label.item.item-input.item-stacked-label.item-input--no-borders
