show customer orders for a provider

--- a/app/styles/orders/index.scss
+++ b/app/styles/orders/index.scss
@@ -6,6 +6,7 @@
     border-radius: 10px;
     border: 1px solid $base-yellow;
     margin-top: 15px;
+    cursor: pointer;
     i{
       color: $base-yellow;
       span{
