bootstrapping views for providers’ customer orders

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -63,4 +63,5 @@
 @import "dispatchers/show";
 @import "cart/cart";
 @import "cart/edit-item";
-@import "orders/index"
+@import "orders/index";
+@import "orders/provider-show";
