--- a/app/styles/overrides/lists.scss
+++ b/app/styles/overrides/lists.scss
@@ -3,6 +3,10 @@
     margin-top: 0;
   }
 
+  &--bottom-narrow {
+    margin-bottom: 0;
+  }
+
   &--centered {
     margin-left: auto;
     margin-right: auto;
