show providers’ customer orders

--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -13,18 +13,12 @@ ion-view(
           .col.col-25 {{ ::("order.providerProfile.quantity" |translate) }}
           .col.col-25 {{ ::("order.providerProfile.price" |translate) }}
         span(ng-repeat='item in providerProfile.customer_order_items')
-          .item.row
-            .col.col-50 {{ ::item.provider_item.titulo}}
-            .col.col-25 {{ ::( ("order.providerProfile.item.cantidadPrefix" |translate) + item.cantidad) }}
-            .col.col-25 {{ ::(item.provider_item_precio_cents | priceCurrency | currency) }}
-          .item.row(ng-if="item.observaciones")
-            .col.col-100.customer-order-item-observations
-              span.strong
-                | {{ ::("order.providerProfile.item.observations" |translate) }}
-              | {{ ::item.observaciones }}
+          span(
+            ng-include="'templates/customer/orders/order-item-row.html'"
+          )
 
         .item.row.strong
-          .col.col-100 {{ ::(providerProfile.customer_order_delivery.status) }}
+          .col.col-100 {{ ::("order.delivery.status." + providerProfile.customer_order_delivery.status | translate) }}
 
     .resource-collection
       .list.list-inset.list--no-borders.resource-collection-table.text-right
